# letterboxd-app

./: .env.example  .gitignore  Dockerfile  README.md  lb-film.db  letterboxd_utils.py  pyproject.toml  req.txt  requirements-core.txt  requirements.txt  requirements_docker.txt  run_algo.bat  run_daily_update.bat  run_daily_update_nozip.bat  run_daily_update_short.bat  run_daily_update_short_nozip.bat  run_test.bat  setup.py  sqlite_utils.py  start_EveryFilmRankedApp.bat  start_LegacyLetterboxdApp.bat  start_LetterboxdApp.bat  start_LetterboxdExplorerApp.bat  start_LetterboxdTerminal.bat  start_grid_app.bat  tmp.txt
db/: lb-film-testing.db  lb-film.db
sql/: algo_features_streamlit.sql  all_features_query.sql  all_features_query_efr.sql  all_film_titles_query.sql  cast_select_statement.sql  collection_issue_select_statement.sql  content_type_select_statement.sql  crew_select_statement.sql  director_rating_query.sql  financials_select_statement.sql  genre_select_statement.sql  imdb_id_select_statement.sql  keyword_query.sql  keyword_query_efr.sql  keyword_query_grid.sql  keyword_select_statement.sql  letterboxd_stats_select_statement.sql  letterboxd_top_250_select_statement.sql  my_rating_query.sql  oldest_letterboxd_stats_select_statement.sql  oldest_streaming_select_statement.sql  oldest_tmdb_metadata_select_statement.sql  popular_letterboxd_stats_select_statement.sql  portrait_select_statement.sql  ranked_person_id_query.sql  recent_films_select_statement.sql  release_date_issue_select_statement.sql  release_info_select_statement.sql  runtime_select_statement.sql  (+6 more)
(+102 files in other folders)
