[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "watchlist_toolkit"
version = "0.1.0"
description = "Toolkit for ingesting, enriching and visualising Letterboxd data"
authors = [{ name="Your Name" }]
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
include = ["watchlist_toolkit*"] 